[gd_scene load_steps=10 format=3 uid="uid://doeyebl4by86r"]

[ext_resource type="PackedScene" uid="uid://dybusjv0ogm3m" path="res://scenes/grid.tscn" id="1_m1q2x"]
[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_t5u6a"]
[ext_resource type="Texture2D" uid="uid://dpj7upi5obdfl" path="res://assets/villain/Torch_Red.png" id="3_3x7lr"]
[ext_resource type="PackedScene" uid="uid://bqbyk0rpxuy00" path="res://scenes/hp_bar.tscn" id="4_idok2"]
[ext_resource type="PackedScene" uid="uid://dmvucbbpwf0oe" path="res://scenes/fire_bar.tscn" id="5_ctq7p"]

[sub_resource type="Animation" id="Animation_luycj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_0ige5"]
resource_name = "attack"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_0qha2"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vwbj1"]
_data = {
"RESET": SubResource("Animation_luycj"),
"attack": SubResource("Animation_0ige5"),
"idle": SubResource("Animation_0qha2")
}

[node name="Enemy" type="Node2D"]
script = ExtResource("1_t5u6a")

[node name="Grid" parent="." instance=ExtResource("1_m1q2x")]

[node name="Sprite" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_3x7lr")
centered = false
flip_h = true
hframes = 7
vframes = 5
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
libraries = {
"": SubResource("AnimationLibrary_vwbj1")
}

[node name="HpBar" parent="Sprite" instance=ExtResource("4_idok2")]
offset_left = 54.0
offset_top = 18.0
offset_right = 142.0
offset_bottom = 34.0

[node name="FireBar" parent="Sprite" instance=ExtResource("5_ctq7p")]
offset_left = 54.0
offset_top = 134.0
offset_right = 142.0
offset_bottom = 150.0

[node name="WeaponTimer" type="Timer" parent="."]

[node name="MovementTimer" type="Timer" parent="."]

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="WeaponTimer" to="." method="_on_weapon_timeout"]
[connection signal="timeout" from="MovementTimer" to="." method="_on_movement_timeout"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
